// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verify func: result of basic find 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#1",
      "guestName": "name#1",
      "permbool": false,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#3",
      "guestName": "name#3",
      "permbool": false,
    },
    Object {
      "_id": "ID#4",
      "guestName": "name#4",
      "permbool": true,
    },
    Object {
      "_id": "ID#5",
      "guestName": "name#5",
      "permbool": false,
    },
    Object {
      "_id": "ID#6",
      "guestName": "name#6",
      "permbool": true,
    },
    Object {
      "_id": "ID#7",
      "guestName": "name#7",
      "permbool": false,
    },
    Object {
      "_id": "ID#8",
      "guestName": "name#8",
      "permbool": true,
    },
    Object {
      "_id": "ID#9",
      "guestName": "name#9",
      "permbool": false,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 40,
}
`;

exports[`verify func: result of find permbool: false 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#1",
      "guestName": "name#1",
      "permbool": false,
    },
    Object {
      "_id": "ID#11",
      "guestName": "name#11",
      "permbool": false,
    },
    Object {
      "_id": "ID#13",
      "guestName": "name#13",
      "permbool": false,
    },
    Object {
      "_id": "ID#15",
      "guestName": "name#15",
      "permbool": false,
    },
    Object {
      "_id": "ID#17",
      "guestName": "name#17",
      "permbool": false,
    },
    Object {
      "_id": "ID#19",
      "guestName": "name#19",
      "permbool": false,
    },
    Object {
      "_id": "ID#21",
      "guestName": "name#21",
      "permbool": false,
    },
    Object {
      "_id": "ID#23",
      "guestName": "name#23",
      "permbool": false,
    },
    Object {
      "_id": "ID#25",
      "guestName": "name#25",
      "permbool": false,
    },
    Object {
      "_id": "ID#27",
      "guestName": "name#27",
      "permbool": false,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: false via eq 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#1",
      "guestName": "name#1",
      "permbool": false,
    },
    Object {
      "_id": "ID#11",
      "guestName": "name#11",
      "permbool": false,
    },
    Object {
      "_id": "ID#13",
      "guestName": "name#13",
      "permbool": false,
    },
    Object {
      "_id": "ID#15",
      "guestName": "name#15",
      "permbool": false,
    },
    Object {
      "_id": "ID#17",
      "guestName": "name#17",
      "permbool": false,
    },
    Object {
      "_id": "ID#19",
      "guestName": "name#19",
      "permbool": false,
    },
    Object {
      "_id": "ID#21",
      "guestName": "name#21",
      "permbool": false,
    },
    Object {
      "_id": "ID#23",
      "guestName": "name#23",
      "permbool": false,
    },
    Object {
      "_id": "ID#25",
      "guestName": "name#25",
      "permbool": false,
    },
    Object {
      "_id": "ID#27",
      "guestName": "name#27",
      "permbool": false,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: false via neq 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#10",
      "guestName": "name#10",
      "permbool": true,
    },
    Object {
      "_id": "ID#12",
      "guestName": "name#12",
      "permbool": true,
    },
    Object {
      "_id": "ID#14",
      "guestName": "name#14",
      "permbool": true,
    },
    Object {
      "_id": "ID#16",
      "guestName": "name#16",
      "permbool": true,
    },
    Object {
      "_id": "ID#18",
      "guestName": "name#18",
      "permbool": true,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#20",
      "guestName": "name#20",
      "permbool": true,
    },
    Object {
      "_id": "ID#22",
      "guestName": "name#22",
      "permbool": true,
    },
    Object {
      "_id": "ID#24",
      "guestName": "name#24",
      "permbool": true,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: true 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#10",
      "guestName": "name#10",
      "permbool": true,
    },
    Object {
      "_id": "ID#12",
      "guestName": "name#12",
      "permbool": true,
    },
    Object {
      "_id": "ID#14",
      "guestName": "name#14",
      "permbool": true,
    },
    Object {
      "_id": "ID#16",
      "guestName": "name#16",
      "permbool": true,
    },
    Object {
      "_id": "ID#18",
      "guestName": "name#18",
      "permbool": true,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#20",
      "guestName": "name#20",
      "permbool": true,
    },
    Object {
      "_id": "ID#22",
      "guestName": "name#22",
      "permbool": true,
    },
    Object {
      "_id": "ID#24",
      "guestName": "name#24",
      "permbool": true,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: true via $in 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#10",
      "guestName": "name#10",
      "permbool": true,
    },
    Object {
      "_id": "ID#12",
      "guestName": "name#12",
      "permbool": true,
    },
    Object {
      "_id": "ID#14",
      "guestName": "name#14",
      "permbool": true,
    },
    Object {
      "_id": "ID#16",
      "guestName": "name#16",
      "permbool": true,
    },
    Object {
      "_id": "ID#18",
      "guestName": "name#18",
      "permbool": true,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#20",
      "guestName": "name#20",
      "permbool": true,
    },
    Object {
      "_id": "ID#22",
      "guestName": "name#22",
      "permbool": true,
    },
    Object {
      "_id": "ID#24",
      "guestName": "name#24",
      "permbool": true,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: true via eq 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#10",
      "guestName": "name#10",
      "permbool": true,
    },
    Object {
      "_id": "ID#12",
      "guestName": "name#12",
      "permbool": true,
    },
    Object {
      "_id": "ID#14",
      "guestName": "name#14",
      "permbool": true,
    },
    Object {
      "_id": "ID#16",
      "guestName": "name#16",
      "permbool": true,
    },
    Object {
      "_id": "ID#18",
      "guestName": "name#18",
      "permbool": true,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#20",
      "guestName": "name#20",
      "permbool": true,
    },
    Object {
      "_id": "ID#22",
      "guestName": "name#22",
      "permbool": true,
    },
    Object {
      "_id": "ID#24",
      "guestName": "name#24",
      "permbool": true,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find permbool: true via neq 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#1",
      "guestName": "name#1",
      "permbool": false,
    },
    Object {
      "_id": "ID#11",
      "guestName": "name#11",
      "permbool": false,
    },
    Object {
      "_id": "ID#13",
      "guestName": "name#13",
      "permbool": false,
    },
    Object {
      "_id": "ID#15",
      "guestName": "name#15",
      "permbool": false,
    },
    Object {
      "_id": "ID#17",
      "guestName": "name#17",
      "permbool": false,
    },
    Object {
      "_id": "ID#19",
      "guestName": "name#19",
      "permbool": false,
    },
    Object {
      "_id": "ID#21",
      "guestName": "name#21",
      "permbool": false,
    },
    Object {
      "_id": "ID#23",
      "guestName": "name#23",
      "permbool": false,
    },
    Object {
      "_id": "ID#25",
      "guestName": "name#25",
      "permbool": false,
    },
    Object {
      "_id": "ID#27",
      "guestName": "name#27",
      "permbool": false,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 20,
}
`;

exports[`verify func: result of find with $and 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#35",
      "guestName": "name#35",
      "permbool": false,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 1,
}
`;

exports[`verify func: result of find with $or 1`] = `
Object {
  "data": Array [
    Object {
      "_id": "ID#0",
      "guestName": "name#0",
      "permbool": true,
    },
    Object {
      "_id": "ID#10",
      "guestName": "name#10",
      "permbool": true,
    },
    Object {
      "_id": "ID#12",
      "guestName": "name#12",
      "permbool": true,
    },
    Object {
      "_id": "ID#14",
      "guestName": "name#14",
      "permbool": true,
    },
    Object {
      "_id": "ID#16",
      "guestName": "name#16",
      "permbool": true,
    },
    Object {
      "_id": "ID#18",
      "guestName": "name#18",
      "permbool": true,
    },
    Object {
      "_id": "ID#2",
      "guestName": "name#2",
      "permbool": true,
    },
    Object {
      "_id": "ID#20",
      "guestName": "name#20",
      "permbool": true,
    },
    Object {
      "_id": "ID#22",
      "guestName": "name#22",
      "permbool": true,
    },
    Object {
      "_id": "ID#24",
      "guestName": "name#24",
      "permbool": true,
    },
  ],
  "limit": 10,
  "skip": 0,
  "total": 21,
}
`;
